update follow from delete to put
